--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.2"
-  }
+  },
+  "rnpm": {
+    "assets": ["./assets/fonts"]
+ }
 }
