--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^28.0.0",
+    "node-time-ago": "^1.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
