--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "debounce": "^1.2.0",
     "expo": "^28.0.0",
     "node-time-ago": "^1.0.0",
     "react": "16.3.1",
