--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
+    "react-native-image-picker": "^0.27.1",
     "react-native-modal": "^6.5.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-scrollview-smart": "^0.1.5",
