--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-time-ago": "^1.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-camera-roll-picker": "^1.2.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-image-picker": "^0.27.1",
     "react-native-modal": "^6.5.0",
