--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-scrollview-smart": "^0.1.5",
     "react-native-simple-dialogs": "^0.4.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-webview-autoheight": "^1.0.6",
     "react-navigation": "^2.3.1",
     "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.7",
